@@ -230,6 +230,8 @@ enum guCommandIds {
     ID_ALBUMBROWSER_COPYTOCLIPBOARD,
     ID_ALBUMBROWSER_COPYTO,
     ID_ALBUMBROWSER_UPDATEDETAILS,
+    ID_ALBUMBROWSER_BEGINDRAG,
+    ID_ALBUMBROWSER_COVER_BEGINDRAG,
     //
     ID_CONFIG_UPDATED,
     //
